--- a/index.html
+++ b/index.html
@@ -1,140 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snake Game</title>
-    <style>
-        body {
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #333;
-            color: white;
-            font-family: Arial, sans-serif;
-        }
-        canvas {
-            background-color: #000;
-            display: block;
-            border: 1px solid #555;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Snake Game</title>
+  <style>
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      background-color: #333;
+      color: white;
+      font-family: Arial, sans-serif;
+    }
+    canvas {
+      background-color: #000;
+      display: block;
+      margin: 0 auto;
+      border: 2px solid #fff;
+    }
+  </style>
 </head>
 <body>
-    <canvas id="gameCanvas" width="400" height="400"></canvas>
-    <script>
-        const canvas = document.getElementById("gameCanvas");
-        const ctx = canvas.getContext("2d");
+  <canvas id="gameCanvas" width="400" height="400"></canvas>
 
-        const gridSize = 20;
-        const tileCount = canvas.width / gridSize;
+  <script>
+    const canvas = document.getElementById('gameCanvas');
+    const ctx = canvas.getContext('2d');
 
-        let snake = [{ x: 10, y: 10 }];
-        let velocity = { x: 0, y: 0 };
-        let food = { x: Math.floor(Math.random() * tileCount), y: Math.floor(Math.random() * tileCount) };
-        let score = 0;
+    const box = 20; // Size of each grid box
+    let snake = [{ x: 9 * box, y: 10 * box }];
+    let direction = "UP";
+    let food = {
+      x: Math.floor(Math.random() * 20) * box,
+      y: Math.floor(Math.random() * 20) * box
+    };
+    let score = 0;
 
-        function drawGame() {
-            moveSnake();
-            if (checkGameOver()) {
-                alert(`Game Over! Your score: ${score}`);
-                resetGame();
-                return;
-            }
-            clearCanvas();
-            drawSnake();
-            drawFood();
-            drawScore();
-            setTimeout(drawGame, 100);
+    document.addEventListener('keydown', changeDirection);
+
+    function changeDirection(event) {
+      if (event.key === 'ArrowUp' && direction !== "DOWN") direction = "UP";
+      else if (event.key === 'ArrowDown' && direction !== "UP") direction = "DOWN";
+      else if (event.key === 'ArrowLeft' && direction !== "RIGHT") direction = "LEFT";
+      else if (event.key === 'ArrowRight' && direction !== "LEFT") direction = "RIGHT";
+    }
+
+    function drawGame() {
+      // Clear the canvas
+      ctx.fillStyle = "black";
+      ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+      // Draw the food
+      ctx.fillStyle = "red";
+      ctx.fillRect(food.x, food.y, box, box);
+
+      // Draw the snake
+      for (let i = 0; i < snake.length; i++) {
+        ctx.fillStyle = i === 0 ? "lime" : "green";
+        ctx.fillRect(snake[i].x, snake[i].y, box, box);
+      }
+
+      // Snake head position
+      let snakeX = snake[0].x;
+      let snakeY = snake[0].y;
+
+      // Update the snake's position
+      if (direction === "UP") snakeY -= box;
+      if (direction === "DOWN") snakeY += box;
+      if (direction === "LEFT") snakeX -= box;
+      if (direction === "RIGHT") snakeX += box;
+
+      // Check if the snake eats the food
+      if (snakeX === food.x && snakeY === food.y) {
+        score++;
+        food = {
+          x: Math.floor(Math.random() * 20) * box,
+          y: Math.floor(Math.random() * 20) * box
+        };
+      } else {
+        // Remove the tail
+        snake.pop();
+      }
+
+      // Add new head
+      const newHead = { x: snakeX, y: snakeY };
+
+      // Check for collisions
+      if (
+        snakeX < 0 ||
+        snakeY < 0 ||
+        snakeX >= canvas.width ||
+        snakeY >= canvas.height ||
+        collision(newHead, snake)
+      ) {
+        clearInterval(game);
+        alert("Game Over! Your score: " + score);
+      }
+
+      snake.unshift(newHead);
+
+      // Draw the score
+      ctx.fillStyle = "white";
+      ctx.font = "20px Arial";
+      ctx.fillText("Score: " + score, 10, 20);
+    }
+
+    function collision(head, array) {
+      for (let i = 0; i < array.length; i++) {
+        if (head.x === array[i].x && head.y === array[i].y) {
+          return true;
         }
+      }
+      return false;
+    }
 
-        function clearCanvas() {
-            ctx.fillStyle = "#000";
-            ctx.fillRect(0, 0, canvas.width, canvas.height);
-        }
-
-        function drawSnake() {
-            ctx.fillStyle = "#0f0";
-            snake.forEach(segment => {
-                ctx.fillRect(segment.x * gridSize, segment.y * gridSize, gridSize, gridSize);
-            });
-        }
-
-        function moveSnake() {
-            const head = { x: snake[0].x + velocity.x, y: snake[0].y + velocity.y };
-            snake.unshift(head);
-
-            // Check if the snake eats the food
-            if (head.x === food.x && head.y === food.y) {
-                score++;
-                placeFood();
-            } else {
-                snake.pop();
-            }
-        }
-
-        function placeFood() {
-            food = {
-                x: Math.floor(Math.random() * tileCount),
-                y: Math.floor(Math.random() * tileCount)
-            };
-        }
-
-        function drawFood() {
-            ctx.fillStyle = "#f00";
-            ctx.fillRect(food.x * gridSize, food.y * gridSize, gridSize, gridSize);
-        }
-
-        function drawScore() {
-            ctx.fillStyle = "#fff";
-            ctx.font = "20px Arial";
-            ctx.fillText(`Score: ${score}`, 10, 20);
-        }
-
-        function checkGameOver() {
-            const head = snake[0];
-
-            // Check walls
-            if (head.x < 0 || head.x >= tileCount || head.y < 0 || head.y >= tileCount) {
-                return true;
-            }
-
-            // Check self-collision
-            for (let i = 1; i < snake.length; i++) {
-                if (snake[i].x === head.x && snake[i].y === head.y) {
-                    return true;
-                }
-            }
-            return false;
-        }
-
-        function resetGame() {
-            snake = [{ x: 10, y: 10 }];
-            velocity = { x: 0, y: 0 };
-            score = 0;
-            placeFood();
-        }
-
-        document.addEventListener("keydown", event => {
-            switch (event.key) {
-                case "ArrowUp":
-                    if (velocity.y === 0) velocity = { x: 0, y: -1 };
-                    break;
-                case "ArrowDown":
-                    if (velocity.y === 0) velocity = { x: 0, y: 1 };
-                    break;
-                case "ArrowLeft":
-                    if (velocity.x === 0) velocity = { x: -1, y: 0 };
-                    break;
-                case "ArrowRight":
-                    if (velocity.x === 0) velocity = { x: 1, y: 0 };
-                    break;
-            }
-        });
-
-        drawGame();
-    </script>
+    const game = setInterval(drawGame, 100);
+  </script>
 </body>
 </html>
